# AbaqusGuard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README .md  README.md  Test-60-RGB.sta  abaqus_jobs_202601.csv  config.toml.example  config_example.toml  main.py  pyproject.toml  run.py  test_inp_parser.py  飞书权限配置指南.md
.claude/: settings.local.json
src/: main.py
src/config/: settings.py
src/core/: csv_logger.py  inp_parser.py  job_detector.py  notify_dedupe.py  process_detector.py  progress_parser.py
src/feishu/: bitable_client.py  bitable_logger.py  webhook_client.py
src/models/: job.py
src/wecom/: __init__.py  webhook_client.py
tests/: GGP-SJ-Rigid-zuobiao-R-disp-half-ex.sta
