[project]
name = "fs-abaqus"
version = "0.1.0"
description = "Abaqus 作业监控脚本 - 监控作业状态并推送到飞书"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "lark-oapi>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
