[project]
name = "abaqus-guard"
version = "0.1.0"
description = "Abaqus 作业监控守卫 - 监控作业状态，支持飞书/企业微信通知和 CSV 记录"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "basedpyright>=1.37.1",
    "lark-oapi>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
